Fix z-index on header

--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ header {
     background: var(--clr-bg-dark);
     position: fixed;
     width: 100%;
+    z-index: 9999;
 }
 
 .logo img {
